--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Neighborhood Map",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "npm install && node node_modules/http-server/bin/http-server -o"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "http-server": "^0.10.0",
     "knockout": "^3.4.2"
   }
 }
